fix z-index with work posts and adjust top bar

--- a/src/components/Work/work.scss
+++ b/src/components/Work/work.scss
@@ -39,6 +39,8 @@
       border-radius: $border-radius;
       overflow: hidden;
 
+      z-index: 1;
+
       img {
         width: 100%;
         height: 100%;
